# bugwatch

./: .dockerignore  .env.example  .gitignore  ISSUES.md  LICENSE  README.md  docker-compose.dev.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  turbo.json  vitest.workspace.ts
apps/server/: Cargo.toml
apps/server/migrations/: 001_initial.sql  001_initial_pg.sql  002_add_user_credits.sql  002_add_user_credits_pg.sql  003_add_monitors.sql  003_add_monitors_pg.sql  004_expand_alerts.sql  004_expand_alerts_pg.sql  005_add_issue_comments.sql  005_add_issue_comments_pg.sql  006_add_project_sdk.sql  006_add_project_sdk_pg.sql  007_billing.sql  007_billing_pg.sql  008_email_rate_limits.sql  008_email_rate_limits_pg.sql  009_payment_failure_tracking.sql  009_payment_failure_tracking_pg.sql  010_tax_handling.sql  010_tax_handling_pg.sql
apps/server/src/: config.rs  error.rs  main.rs
apps/server/src/api/: ai_fixes.rs  alerts.rs  auth.rs  billing.rs  comments.rs  events.rs  issues.rs  mod.rs  monitors.rs  projects.rs  webhooks.rs
apps/server/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
apps/server/src/billing/: mod.rs  stripe.rs  tiers.rs
apps/server/src/db/: mod.rs  models.rs  queries.rs
apps/server/src/db/repositories/: alerts.rs  comments.rs  events.rs  issues.rs  mod.rs  monitors.rs  organizations.rs  projects.rs  sessions.rs  users.rs
apps/server/src/middleware/: mod.rs  tier_guard.rs
apps/server/src/processing/: fingerprint.rs  mod.rs
apps/server/src/rate_limit/: mod.rs  token_bucket.rs
apps/server/src/services/: ai.rs  alerting.rs  mod.rs  monitoring.rs  notifications.rs  retention.rs
deploy/: .env.production.example  deploy.sh  docker-compose.prod.yml  init-db.sql
(+122 files in other folders)
